# anki-geography-maps

./: .cursorrules  .gitignore  README.md  __init__.py  cli.py  draw_map.py  example_territory_map.py  find_neighbors.py  models.py  natural_earth_database_guide.md  olddraw_map.py  oldfind_neighbors.py  pyproject.toml  renderer.py  territory_analyzer.py  test_country_types.py
docs/: cli_plan.md  cli_usage.md  multiling_labels.md  problems.md  territory_plan.md
maps/: __init__.py  __main__.py  cli.py  draw_map.py  find_neighbors.py  language_config.py  models.py  renderer.py  territory_analyzer.py
tests/: conftest.py
tests/maps/: test_cli.py  test_country_types.py  test_draw_map.py  test_find_neighbors.py  test_language_support.py  test_refactoring.py  test_territory_analyzer.py
